--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,11 @@
 [build]
-  command = "cd backend && npm install"
+# Diretório onde está o package.json do backend
+root = "backend"
+command = "npm install"
 
-[start]  
-  command = "cd backend && npm start"
+[start]
+root = "backend"
+command = "npm start"
 
 [variables]
-  NODE_ENV = "production"
+NODE_ENV = "production"
